resources/testcases_static_checks/tests/positive/isWeaklyAcyclic/cq-entailment.rls
../../../tests_common_data/rule-classification-examples/cq-entailment.rls