resources/testcases_static_checks/tests/negative/isLinear/non-sticky-projection.rls
../../../tests_common_data/rule-classification-examples/non-sticky-projection.rls